# task-3-currency-exchange

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  task3.md
src/config/: ca.pem  database.py
src/controllers/: country_controller.py
src/models/: models.py
src/schema/: schema.py
src/services/: country_refresh_service.py  database_service.py
src/utils/: api_requests_handler.py  image_generation.py
